[tool.poetry]
name = "binance_analyst"
version = "0.1.0"
description = ""
authors = ["Laurent Arthur <laurent.arthur75@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
cachetools = "^4.2.2"
pandas = "^1.2.4"
requests = "^2.25.1"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.1"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
